<resources>
    <string name="app_name">VeriParkTask</string>
    <string name="title_activity_nav_draw">NavDrawActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">VERIPARK</string>
    <string name="nav_header_subtitle">IMKB Hisse Senetleri/Endeksler</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="all">Hisse ve Endeksler</string>
    <string name="increasing">Yükselenler</string>
    <string name="decreasing">Düşenler</string>
    <string name="volume_30">Hacime Göre - 30</string>
    <string name="volume_50">Hacime Göre - 50</string>
    <string name="volume_100">Hacime Göre - 100</string>
    <string name="detailBarHeader">IMKB Hisse ve Endeksler</string>
    <string name="symbol">Sembol</string>
    <string name="price">Fiyat</string>
    <string name="difference">Fark</string>
    <string name="volume">Hacim</string>
    <string name="pid">Alış</string>
    <string name="isUp">Değişim</string>
    <string name="offer">Satış</string>

</resources>